# ipracticom-sweeper-private

./: .env.example  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  bootstrap.sh  install.sh  pyproject.toml  quickstart.sh
.hermes/plans/: 2026-06-29_153322-sweeper-comprehensive-observability.md
dashboards/: freeswitch.json  overview.json  security.json
deploy/: README.md  ipracticom-sweeper-watchdog.timer
deploy/scripts/: install_claude_box.sh  setup_aws.sh  setup_slack.sh  start.sh
deploy/scripts/lib/: config_init.sh  detect_os.sh  python_check.sh  service_install.sh  venv_install.sh
docs/: COVERAGE_MATRIX.md  FREESWITCH_MONITORING_PLAN.md  INSTALL_AWS_POC_SSM.md  INSTALL_READONLY_AND_MULTIHOST.md  MONITORING_COVERAGE.md  UPDATE.md
etc/: repair_policy.yaml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Approvals.tsx  Chat.tsx  CpuSparklineWidget.tsx  Dashboard.tsx  Evidence.tsx  HeatmapWidget.tsx  History.tsx  LogStreamWidget.tsx  MachineList.tsx  MetricsChart.tsx  Predictions.tsx  Settings.tsx  Sidebar.tsx  UptimeChartWidget.tsx
frontend/src/context/: DataContext.tsx
frontend/src/hooks/: useAlertOverlay.ts  useAlerts.ts  useApprovals.ts  useFleet.ts  usePolling.ts
frontend/src/services/: adapters.ts  agentTypes.ts  endpoints.ts  http.ts
rules/: default.yaml
scripts/: build-webui.sh  install-systemd.sh  install_telegram_bot.sh  update.sh  verify_install.py
src/ipracticom_sweeper/: __init__.py  _log.py  agent_api.py  agent_client.py  catalogue.py  chat.py  chat_llm.py  chat_rag.py  chat_tools.py  dashboard.py  pipeline.py  spa_context.py  sweeper.py
src/ipracticom_sweeper/audit/: __init__.py  integrity.py  logger.py  rotation.py
src/ipracticom_sweeper/collectors/: __init__.py  k8s.py  pg.py
src/ipracticom_sweeper/config/: __init__.py  connectors.py  host_config.py  legacy.py  loader.py  module_catalog.yaml  module_registry.py  paths.py  (+2 more)
systemd/: ipracticom-sweeper-api.service  ipracticom-sweeper-watchdog.service  ipracticom-sweeper-watchdog.sh  ipracticom-sweeper.env.example  ipracticom-sweeper.service  ipracticom-sweeper.timer
tests/: conftest.py  test_agent.py  test_agent_api_endpoints.py  test_agent_api_logs.py  test_aggregator.py  test_approval_v2.py  test_approvals_render.py  test_approvals_route.py  test_audit_integrity.py  test_audit_logger.py  test_audit_rotation.py  test_catalogue.py  test_catalogue_equals_monitor_modules.py  test_catalogue_missing_modules.py  test_chat.py  test_chat_llm.py  test_chat_rag.py  test_collector.py  test_connectors.py  test_dashboard.py  test_dashboard_routes.py  test_dashboard_v14_routes.py  test_diagnose.py  test_diagnose_adapter.py  test_diagnose_http.py  test_diagnose_ssl.py  test_documentation.py  test_evidence_bundle.py  test_fleet_metrics_render.py  test_fleet_route.py  test_grafana_dashboards.py  test_history_loaders.py  test_host_config.py  test_inspector.py  test_local_metrics.py  test_log_suppressed.py  test_module_registry.py  test_monitor_aide.py  test_monitor_backup.py  test_monitor_cpu.py  (+76 more)
tests/collectors/: test_k8s.py  test_pg.py
tests/config/: test_loader.py  test_validator.py
tests/cost/: test_analyzer.py
tests/evidence/: s3_mock.py  test_exporter.py  test_s3_integration.py  test_signer.py
tests/fleet/: test_aggregator.py
tests/notify/: test_dedup.py  test_queue.py
tests/predict/: test_analyzer.py  test_v2.py
tests/runbooks/: test_engine.py
tests/slack_actions/: test_endpoint.py  test_handler.py  test_verifier.py
tests/state/: test_store.py
tests/telegram_bot/: test_agent_client.py  test_auth.py  test_config.py  test_formatter.py  test_handlers.py  test_keyboards.py
tests/webhooks/: test_dispatcher.py  test_server.py
(+138 files in other folders)
