[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ipracticom_sweeper"
version = "0.2.0"
description = "AWS Linux server health monitor and auto-repair agent for iPracticom"
requires-python = ">=3.10"
dependencies = [
    "structlog>=24.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "flask>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
