[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ipracticom_sweeper"
version = "0.6.0"
description = "AWS Linux server health monitor and auto-repair agent for iPracticom"
requires-python = ">=3.10"
dependencies = [
    "structlog>=24.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "flask>=3.0.0",
    "uvicorn>=0.27.0",
    "python-telegram-bot[all]>=21.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "freezegun>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
